; ModuleID = '/home/carl/AnghaBench/reactos/base/system/diskpart/extr_rescan.c_rescan_main.c'
source_filename = "/home/carl/AnghaBench/reactos/base/system/diskpart/extr_rescan.c_rescan_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@StdOut = common dso_local global i32 0, align 4
@IDS_RESCAN_START = common dso_local global i32 0, align 4
@IDS_RESCAN_END = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rescan_main(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @StdOut, align 4
  %6 = load i32, i32* @IDS_RESCAN_START, align 4
  %7 = call i32 @ConResPuts(i32 %5, i32 %6)
  %8 = call i32 (...) @DestroyPartitionList()
  %9 = call i32 (...) @CreatePartitionList()
  %10 = load i32, i32* @StdOut, align 4
  %11 = load i32, i32* @IDS_RESCAN_END, align 4
  %12 = call i32 @ConResPuts(i32 %10, i32 %11)
  %13 = load i32, i32* @TRUE, align 4
  ret i32 %13
}

declare dso_local i32 @ConResPuts(i32, i32) #1

declare dso_local i32 @DestroyPartitionList(...) #1

declare dso_local i32 @CreatePartitionList(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
